--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -8,12 +8,21 @@
     /* background-color: blue; */
 }
 
+.scrollingDiv {
+    border: 2px solid gold;
+    height: 3000px;
 
+
+    /* position: relative; */
+}
 
 .homeDiv {
-    border: 2px solid orange;
+    border: 2px solid red;
     height: 100dvh;
     width: 100%;
+
+    position: sticky;
+    top: 0;
 
 }
 
@@ -21,4 +30,41 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: 0;
+}
+
+
+.title, 
+.slogan {
+    /* border: 2px solid white; */
+    font-family: wildGrowth;
+    z-index: 10;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotateX(10deg) rotateY(-10deg);
+    width: 75%;
+    text-align: center;
+    color: white;
+    font-size: 10vw;
+    font-weight: 700;
+    /* text-shadow: 3px 3px 12px rgba(0, 0, 0); */
+    text-shadow:
+        1px 1px 2px rgba(0, 0, 0, 0.8),
+        2px 2px 5px rgba(0, 0, 0, 0.7),
+        3px 3px 8px rgba(0, 0, 0, 0.6),
+        4px 4px 11px rgba(0, 0, 0, 0.5),
+        5px 5px 14px rgba(0, 0, 0, 0.4);
+
+}
+
+.tinyFigures {
+    border: 2px solid magenta;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+
 }
