--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -14,6 +14,7 @@
 
 
     /* position: relative; */
+
 }
 
 .homeDiv {
@@ -23,7 +24,13 @@
 
     position: sticky;
     top: 0;
+    overflow: hidden;
 
+
+    /* display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center; */
 }
 
 .homeImage {
@@ -34,37 +41,71 @@
 }
 
 
-.title, 
-.slogan {
-    /* border: 2px solid white; */
+.parallaxText {
+    border: 2px solid white;
+    /* background-color: #051f0088; */
+    color: #89ac00;
+    color: rgb(0, 0, 0);
+    color: #d0d0d0;
+    /* filter: blur(3px); */
+
+    /* Glass morph */
+    background-color: transparent;
+    backdrop-filter: blur(3px);
+    background-image: linear-gradient(
+        120deg,
+        #051f0088,
+        #ffffff55,
+        #b6f80155
+    );
+
+
     font-family: wildGrowth;
     z-index: 10;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) rotateX(10deg) rotateY(-10deg);
-    width: 75%;
-    text-align: center;
-    color: white;
+    transform: translate(-50%, -50%) rotateX(15deg) rotateY(-10deg);
+    width: 80dvw;
+    height: 36dvw;
+    padding: 0 0 3dvh 3dvw;
     font-size: 10vw;
     font-weight: 700;
-    /* text-shadow: 3px 3px 12px rgba(0, 0, 0); */
+    letter-spacing: 2px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
     text-shadow:
         1px 1px 2px rgba(0, 0, 0, 0.8),
         2px 2px 5px rgba(0, 0, 0, 0.7),
         3px 3px 8px rgba(0, 0, 0, 0.6),
         4px 4px 11px rgba(0, 0, 0, 0.5),
         5px 5px 14px rgba(0, 0, 0, 0.4);
-
 }
+
 
 .tinyFigures {
-    border: 2px solid magenta;
-    width: 100%;
-    position: relative;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-
+    border: 2px solid lime;
+    height: 20%;
+    width: 70%;
+    font-size: 6vw;
+    top: 10%;
+    left: 10%;
+    /* word-spacing: 20px; */
 }
+
+.epicStories {
+    border: 2px solid lime;
+    height: 20%;
+    width: 70%;
+    font-size: 6vw;
+    top: 20%;
+    left: 25%;
+}
+
+
+.parallaxHomeImage {
+    border: 2px solid magenta;
+}
+
