--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -59,10 +59,10 @@
         #b6f80155
     );
 
-
     font-family: wildGrowth;
     z-index: 10;
     position: absolute;
+    text-align: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotateX(15deg) rotateY(-10deg);
@@ -72,6 +72,7 @@
     font-size: 10vw;
     font-weight: 700;
     letter-spacing: 2px;
+
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -106,6 +107,14 @@
 
 
 .parallaxHomeImage {
-    border: 2px solid magenta;
+    border: 2px solid white;
+    border-radius: 10px;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    width: 40dvw;
+    height: 25dvh;
+    object-fit: cover;
+    box-shadow: 3px 3px 15px 5px black;
 }
 
