--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -10,7 +10,7 @@
 
 .scrollingDiv {
     border: 2px solid gold;
-    height: 5000px;
+    height: 4000px;
     /* position: relative; */
 }
 
@@ -155,20 +155,60 @@
     flex-flow: column nowrap;
 }
 
+.glassMorph {
+    /* Glass morph */
+    background-color: transparent;
+    backdrop-filter: blur(3px);
+    background-image: linear-gradient(120deg,
+            #051f0088,
+            #ffffff55,
+            #b6f80155);
+}
+
 .bannerLink {
-    border: 2px solid blue;
-    flex: 1;
+    /* border: 2px solid blue; */
+    flex: 1.25;
     white-space: nowrap;
-    position: relative;
+    /* position: relative; */
     overflow: hidden;
+    /* color: grey; */
+    background-color: black;
+
+    background-color: transparent;
+    backdrop-filter: blur(2px);
+    background-image: linear-gradient(120deg,
+            #051f0088,
+            #ffffff55,
+            #b6f80155);
+
+
+
 }
 
 .bannerLink p {
-    border: 2px solid white;
-    position: absolute;
-    top: 50%;
+    /* border: 2px solid red; */
+    /* border-top: 1px solid red; */
+    border-bottom: 1px solid silver;
+
+    /* position: absolute; */
+    /* top: 50%;
     left: 20px;
-    transform: translateY(-50%);
+    transform: translateY(-50%); */
+    padding-left: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.colorChange {
+    color: #88d100;
+    color: silver;
+    background-color: #041800;
 }
 
 .homeMenu img {
