--- a/src/components/contactView/contactView.css
+++ b/src/components/contactView/contactView.css
@@ -43,14 +43,14 @@
     position: absolute;
     top: 0;
     left: 0;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-    height: 80%;
+    top: 60%;
+    left: 35%;
+    transform: translate(-50%, -50%) rotate(-2.5deg);
+    width: 170%;
+    height: 150%;
     object-fit: contain;
     z-index: 0;
-    filter: grayscale(100%) contrast(120%) opacity(0.3) blur(2px);
+    filter: opacity(0.15) blur(3px);
     mix-blend-mode: overlay; 
   }
 
@@ -66,13 +66,91 @@
     font-size: 3dvh;
   }
 
-  .contactForm input{
-    width: 65%;
 
+  .input-group {
+    border: 2px solid blue;
+    position: relative;
+    margin: 2rem 0;
+    width: 22rem;
   }
-  .contactForm select{
-    width: 25%;
+
+  .input-group input {
+    width: 100%;
+    padding: 1rem;
+    font-size: 1.1rem;
+    border: none;
+    outline: none;
+
+    background-color: transparent;
+    color: white;
+  }
+
+  .input-group.type-md input {
+    border-bottom: 0.05rem solid white;
+    padding-left: 0;
+  }
+
+  .input-group label {
+    color: white;
+    font-size: 1.1rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: 0.2s ease-in-out;
+  }
+
+  .input-group.type-md label {
+    left: 0;
+  }
+
+  .input-group input:focus + label,
+  .input-group input:valid + label {
+    top: 5%;
+    color: cyan;
+    font-size: 0.8rem;
+  }
+
+  .input-group input:not(:focus) + label {
+    color: #aaaaaa;
+  }
+
+  .input-group .bottomline {
+    height: 0.1rem;
+    width: 100%;
+    background-color: cyan;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    transform: scale(0);
+    transition: 0.3s ease-in-out;
+    
+  }
+  
+  .input-group.type-md input:focus ~ .bottomline {
+    transform: scaleX(1);
+  }
+
+  /* .contactForm input {
+    width: 65%;
+    height: 30px;
+    font-size: 2.25dvh;
     text-align: center;
+  }
+  .contactForm textarea {
+    width: 65%;
+    height: 10dvh;
+    text-align: center;
+  }
+  .contactForm select {
+    width: 25%;
+    font-size: 2.25dvh;
+    text-align: center;
+  } */
+
+
+  .contactReturn {
+    z-index: 1;
   }
 
 
