--- a/src/components/contactView/contactView.css
+++ b/src/components/contactView/contactView.css
@@ -123,6 +123,7 @@
     bottom: 0;
 
     transform: scale(0);
+    transform-origin: left;
     transition: 0.3s ease-in-out;
     
   }
@@ -131,22 +132,32 @@
     transform: scaleX(1);
   }
 
-  /* .contactForm input {
-    width: 65%;
-    height: 30px;
-    font-size: 2.25dvh;
-    text-align: center;
+
+
+  .realTextArea {
+    width: 0;
+    height: 0;
+    opacity: 0;
   }
-  .contactForm textarea {
-    width: 65%;
+
+  .fakeTextArea {
+    border: 1px solid white;
+    width: 90%;
     height: 10dvh;
-    text-align: center;
   }
-  .contactForm select {
-    width: 25%;
-    font-size: 2.25dvh;
-    text-align: center;
-  } */
+
+  .inline-block {
+    display: inline-block;
+    margin-right: 1px; 
+  }
+  
+  .space {
+    display: inline-block;
+    width: 0.3em; 
+  }
+
+
+
 
 
   .contactReturn {
