--- a/src/components/contactView/contactView.css
+++ b/src/components/contactView/contactView.css
@@ -21,6 +21,11 @@
 
 }
 
+.contactView p {
+  /* border: 2px solid white; */
+  font-size: 2rem;
+}
+
 .contactView::after {
   content: "";
   position: absolute;
@@ -55,53 +60,47 @@
   }
 
   .contactForm {
-    border: 2px solid white;
+    /* border: 2px solid white; */
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    gap: 2dvh;
     z-index: 100;
-    font-size: 3dvh;
+    /* font-size: 3dvh; */
+    gap: 2.5dvh;
   }
 
 
+
   .input-group {
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     position: relative;
-    margin: 2rem 0;
-    width: 22rem;
+    width: 80%;
   }
 
   .input-group input {
     width: 100%;
-    padding: 1rem;
-    font-size: 1.1rem;
+    padding: 1rem 0;
+    font-size: 1.25rem;
+    color: rgb(230, 254, 16);
     border: none;
     outline: none;
-
     background-color: transparent;
-    color: white;
-  }
-
-  .input-group.type-md input {
-    border-bottom: 0.05rem solid white;
+    border-bottom: 0.1rem solid white;
     padding-left: 0;
   }
 
   .input-group label {
     color: white;
-    font-size: 1.1rem;
+    font-size: 1.25rem;
     position: absolute;
     top: 50%;
+    left: 0;
     transform: translateY(-50%);
-    transition: 0.2s ease-in-out;
+    transition: 0.3s ease-in-out;
   }
 
-  .input-group.type-md label {
-    left: 0;
-  }
 
   .input-group input:focus + label,
   .input-group input:valid + label {
@@ -111,7 +110,7 @@
   }
 
   .input-group input:not(:focus) + label {
-    color: #aaaaaa;
+    color: #e0e0e0;
   }
 
   .input-group .bottomline {
@@ -128,7 +127,7 @@
     
   }
   
-  .input-group.type-md input:focus ~ .bottomline {
+  .input-group input:focus ~ .bottomline {
     transform: scaleX(1);
   }
 
