--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -43,7 +43,7 @@
     transition: background-color 0.75s ease-in-out;
 }
 
-.bigImageSlider {
+.largeScreenGallery {
     /* border: 2px solid red; */
     display: none;
     flex: 0;
@@ -150,10 +150,10 @@
     z-index: 5;
     text-align: center;
     color: whitesmoke;
-    text-shadow: 
-        1px 1px 0 black, 
-        2px 2px 0 black, 
-        3px 3px 0 black, 
+    text-shadow:
+        1px 1px 0 black,
+        2px 2px 0 black,
+        3px 3px 0 black,
         4px 4px 0 rgba(0, 0, 0, 0.5);
 
 }
@@ -240,11 +240,32 @@
     font-size: 2.75dvw;
 }
 
+
+
+
+
 .slideShowImage {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    -webkit-mask-image: 
+    linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%)
+    ;
+    
+    mask-image: 
+    linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
+    -webkit-mask-composite: destination-in;
+    mask-composite: intersect;
+
 }
+
 
 
 
@@ -267,11 +288,11 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-  }
-  
-  .menu-btn::before,
-  .menu-btn::after,
-  .menu-btn span {
+}
+
+.menu-btn::before,
+.menu-btn::after,
+.menu-btn span {
     content: "";
     display: block;
     width: 100%;
@@ -280,19 +301,19 @@
     border-radius: 2px;
     position: absolute;
     transition: 0.3s;
-  }
-  
-  .menu-btn::before {
+}
+
+.menu-btn::before {
     top: 6px;
-  }
-  
-  .menu-btn::after {
+}
+
+.menu-btn::after {
     bottom: 6px;
-  }
-  
-  .menu-btn span {
+}
+
+.menu-btn span {
     position: relative;
-  }
+}
 
 
 
@@ -317,8 +338,8 @@
         width: 430px;
     }
 
-    .bigImageSlider {
-        border: 2px solid red;
+    .largeScreenGallery {
+        /* border: 2px solid red; */
         display: flex;
         flex-grow: 1;
         height: 100%;
@@ -332,6 +353,7 @@
         gap: 20px;
         /* scroll-snap-type: y mandatory;
         scroll-behavior: smooth; */
+
     }
 
     .largeArtBox {
@@ -347,13 +369,14 @@
         bottom: 0;
         left: 0;
     }
+
     .largeArtImage {
         width: 100%;
         height: 100%;
         object-fit: contain;
     }
 
-    
+
 
 }
 
@@ -363,6 +386,7 @@
 .mobileView {
     /* display: flex; */
 }
+
 .largeView {
     display: none;
 }
@@ -372,11 +396,12 @@
 
     .mobileView {
         display: none;
-    
+
     }
+
     .largeView {
         display: flex;
     }
-    
+
 
 }
