--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -356,13 +356,15 @@
         border: 2px solid green;
         width: 100%;
         height: 100%;
-        overflow: auto;
+        overflow-y: auto;
+
 
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-items: flex-start;
-        gap: 10px;
+
+        /* gap: 10px; */
         /* scroll-snap-type: y mandatory;
         scroll-behavior: smooth; */
 
@@ -374,11 +376,7 @@
         height: 250px;
         position: relative;
         /* scroll-snap-align: center; */
-    }
-
-    .largeArtBox:nth-child(even) {
-        transform: translateY(70px);
-    }
+    }      
 
     .largeArtTitle {
         position: absolute;
