--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -76,8 +76,8 @@
     width: 50dvh;
     height: 50dvh;
     position: absolute;
-    top: -5%;
-    left: -20%;
+    top: -30px;
+    left: -85px;
     object-fit: contain;
     filter: opacity(25%);
 }
@@ -261,7 +261,6 @@
         linear-gradient(to left, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0) 100%);
     -webkit-mask-composite: destination-in;
     mask-composite: intersect;
-
 }
 
 
