--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -35,17 +35,15 @@
     /* border: 2px solid white; */
     width: 100%;
     position: sticky;
-    top: 0;
+    top: 5%;
     font-size: 10dvw;
     text-align: right;
-    margin-bottom: 18dvh;
+    margin-bottom: 10dvh;
 }
 
 
 .artBox {
     border: 2px solid lime;
-    width: 375px;
-    height: 425px;
     width: 100dvw;
     height: 100dvh;
     display: flex;
@@ -72,4 +70,48 @@
     left: 10%;
     font-size: 30px;
     color: lime;
+}
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 430px) {
+
+    .groupDisplay {
+        scroll-snap-type: none;
+        gap: 15px;
+        padding: 0 40px;
+    }
+
+    .artBox {
+        scroll-snap-align: none;
+        width: 225px;
+        height: 225px;
+    }
+
+    
+
+    .artImage {
+        width: 100%;
+        height: 100%;
+    }
+
+    .artTitle {
+        /* border: 2px solid white; */
+        position: absolute;
+        bottom: 5%;
+        left: 5%;
+        font-size: 20px;
+        color: lime;
+    }
+
+
+
+
 }
