--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -183,7 +183,7 @@
     border: none;
     width: 30%;
     height: 8%;
-    font-size: 3dvw;
+    font-size: 20px;
     border-radius: 4px;
     border: 1px solid #ffffff88;
     cursor: pointer;
@@ -331,7 +331,7 @@
 @media (min-width: 430px) {
 
     .galleryPage {
-        border: 2px solid magenta;
+        /* border: 2px solid magenta; */
         padding: 3dvh;
     }
 
@@ -352,29 +352,26 @@
     }
 
     .scrollingArtBox {
-        border: 2px solid green;
+        /* border: 2px solid green; */
         width: 100%;
         height: 100%;
         overflow-y: auto;
+        padding-top: 40px;
 
 
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-items: flex-start;
-
-        /* gap: 10px; */
-        /* scroll-snap-type: y mandatory;
-        scroll-behavior: smooth; */
+        gap: 15px;
 
     }
 
     .largeArtBox {
-        border: 2px solid gold;
+        /* border: 2px solid gold; */
         width: 250px;
         height: 250px;
         position: relative;
-        /* scroll-snap-align: center; */
     }      
 
     .largeArtTitle {
@@ -394,10 +391,10 @@
         position: absolute;
         bottom: 0;
         right: 0;
-        width: 20dvw;
-        height: 5dvh;
+        width: 4dvw;
+        height: 20dvh;
+        writing-mode: vertical-rl;
     }
-
 
 
 
@@ -406,8 +403,10 @@
 
 
 
+
+/* toggles your different button */
 .mobileView {
-    /* display: flex; */
+    display: flex;
 }
 
 .largeView {
