--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -9,7 +9,6 @@
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
@@ -24,7 +23,6 @@
     background-color: var(--shade-group);
     background-image: url('../../images/texture.png');
     background-size: cover;
-    /* background-blend-mode: overlay, normal; */
     mix-blend-mode: overlay;
     pointer-events: none;
     opacity: 0.5;
@@ -43,7 +41,7 @@
 
 
 .artBox {
-    border: 2px solid lime;
+    /* border: 2px solid lime; */
     width: 100dvw;
     height: 100dvh;
     display: flex;
@@ -57,7 +55,7 @@
 }
 
 .artImage {
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     width: 95%;
     height: 70%;
     object-fit: contain;
@@ -71,11 +69,6 @@
     font-size: 30px;
     color: lime;
 }
-
-
-
-
-
 
 
 
@@ -95,8 +88,6 @@
         height: 225px;
     }
 
-    
-
     .artImage {
         width: 100%;
         height: 100%;
@@ -110,8 +101,5 @@
         font-size: 20px;
         color: lime;
     }
-
-
-
 
 }
