--- a/src/pages/groupDisplay/groupDisplay.css
+++ b/src/pages/groupDisplay/groupDisplay.css
@@ -3,14 +3,11 @@
     border: 2px solid blue;
     height: 100dvh;
     width: 100dvw;
-    overflow: auto;
     background: radial-gradient(circle, #929292 0%, #707070 40%, #0a0a0a 100%);
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
     align-items: center;
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
 }
 
 .groupDisplay::after {
@@ -30,45 +27,18 @@
 
 
 .groupTitle {
-    /* border: 2px solid white; */
-    width: 100%;
-    position: sticky;
+    border: 2px solid white;
+    width: 90%;
+    position: fixed;
     top: 5%;
-    font-size: 10dvw;
+    font-size: 6dvh;
     text-align: right;
-    margin-bottom: 10dvh;
 }
 
 
-.artBox {
-    /* border: 2px solid lime; */
-    width: 100dvw;
-    height: 100dvh;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    position: relative;
 
-    /* scroll-snap-align: start; */
-    scroll-snap-align: center;
-}
 
-.artImage {
-    /* border: 2px solid purple; */
-    width: 95%;
-    height: 70%;
-    object-fit: contain;
-}
 
-.artTitle {
-    /* border: 2px solid white; */
-    position: absolute;
-    bottom: 20%;
-    left: 10%;
-    font-size: 30px;
-    color: lime;
-}
 
 
 
@@ -77,29 +47,10 @@
 @media (min-width: 430px) {
 
     .groupDisplay {
-        scroll-snap-type: none;
-        gap: 15px;
-        padding: 0 40px;
+        /* scroll-snap-type: none; */
+        /* gap: 15px; */
+        /* padding: 0 40px; */        
     }
 
-    .artBox {
-        scroll-snap-align: none;
-        width: 225px;
-        height: 225px;
-    }
-
-    .artImage {
-        width: 100%;
-        height: 100%;
-    }
-
-    .artTitle {
-        /* border: 2px solid white; */
-        position: absolute;
-        bottom: 5%;
-        left: 5%;
-        font-size: 20px;
-        color: lime;
-    }
 
 }
