--- a/src/App.css
+++ b/src/App.css
@@ -124,13 +124,17 @@ html {
 
   .trackButton {
     border: none;
+    background-color: transparent;
     width: 100%;
     height: 100%;
     color: #FFF;
-    background-color: transparent;
     transition: all 0.3s;
     position: relative;
     font-size: inherit;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .trackButton span {
     transition: all 0.3s;
