--- a/src/components/contactView/contactView.css
+++ b/src/components/contactView/contactView.css
@@ -77,6 +77,9 @@
   /* border: 2px solid white; */
   font-family: wildGrowth;
   font-size: 2rem;
+  /* width: 100%; */
+  /* height: 40px; */
+  /* text-align: center; */
 }
 
 
