--- a/src/pages/galleryPage/galleryPage.css
+++ b/src/pages/galleryPage/galleryPage.css
@@ -153,24 +153,6 @@
     z-index: 5;
 }
 
-.galleryButton {
-    /* Glass morph */
-    /* backdrop-filter: blur(3px); */
-    background-color: transparent;
-    background-image: linear-gradient(120deg,
-            #6e6e6e66,
-            #ffffff66,
-            #6e6e6e66);
-    border: none;
-    width: 30%;
-    height: 8%;
-    font-size: 20px;
-    border-radius: 4px;
-    border: 1px solid #ffffff88;
-    cursor: pointer;
-    position: absolute;
-    bottom: 7%;
-}
 
 
 .homeLink {
@@ -227,6 +209,16 @@
 
 
 
+.galleryButton-container {
+    /* border: 2px solid green; */
+    position: absolute;
+    bottom: 7%;
+    height: 9%;
+    width: 50%;
+    font-size: 20px;
+}
+
+
 
 /* toggles your different button */
 .mobileView {
@@ -241,7 +233,6 @@
 
     .mobileView {
         display: none;
-
     }
 
     .largeView {
